Updated build for JPMS.