@@ -19,7 +19,7 @@
         <project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
 
         <!-- Settings: maven-compiler-plugin -->
-        <maven.compiler.main-jdk>8</maven.compiler.main-jdk>
+        <maven.compiler.main-jdk>11</maven.compiler.main-jdk>
         <maven.compiler.test-jdk>11</maven.compiler.test-jdk>
 
         <!-- Settings: maven-build -->
@@ -262,12 +262,7 @@
                         <configuration>
                             <argLine>
                                 <!-- main-java packages -->
-                                --add-opens&#32;zoftwhere.bolt.assertion/app.zoftwhere.bolt=ALL-UNNAMED
-                                --add-opens&#32;zoftwhere.bolt.assertion/app.zoftwhere.bolt.api=ALL-UNNAMED
                                 <!-- test-java packages -->
-                                --add-opens&#32;zoftwhere.bolt.assertion/app.zoftwhere.bolt.deluge=ALL-UNNAMED
-                                --add-opens&#32;zoftwhere.bolt.assertion/app.zoftwhere.bolt.scope=ALL-UNNAMED
-                                --add-opens&#32;zoftwhere.bolt.assertion/example=ALL-UNNAMED
                             </argLine>
                             <forkCount>0</forkCount>
                             <useSystemClassLoader>false</useSystemClassLoader>
@@ -277,7 +272,6 @@
                                 <!-- Include default classes -->
                                 <include>**/*Test.java</include>
                                 <!-- Include example classes -->
-                                <include>example/*.java</include>
                             </includes>
                         </configuration>
                     </execution>
@@ -470,7 +464,7 @@
                 <executions>
                     <execution>
                         <id>main-jpms</id>
-                        <phase>package</phase>
+                        <phase>none</phase>
                         <goals>
                             <goal>add-module-info</goal>
                         </goals>
